tests/NormalTests/paczka1/fuzzy1/30222776.err
Error in line 2: Paq7hdw3LPZ S326 7,0
Error in line 13: 6x2QhKcM S736 20,7
Error in line 17: 6x2QhKcM A967 78,3
Error in line 26: UPDZ7 S326 146,6
Error in line 15: IrwH S326 288,6
Error in line 34: 3Hg0LuMST S326 36,9
